--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/josefin-sans": "^5.2.6",
     "@tailwindcss/vite": "^4.1.10",
     "framer-motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   },
